EAI Sources from refarch-templates